# openperception

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MASTER_INDEX.md  Makefile  README.md  REQUIREMENTS.md  ROADMAP.md  pyproject.toml  requirements-dev.txt
.claude/: settings.local.json
algorithms/DaltonLens-Python/: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
algorithms/DaltonLens-Python/daltonlens/: __init__.py  cmfs.py  convert.py  daltonize.py  generate.py  geometry.py  main.py  simulate.py  utils.py
algorithms/DaltonLens-Python/research/: FieldOfView.ipynb  rgbspan.ipynb
algorithms/DaltonLens-Python/research/for-desktop/: precomputed_matrices.ipynb  precomputed_matrices_gmic.ipynb
algorithms/DaltonLens-Python/research/for-svg/: precomputed_for_svg.ipynb
algorithms/DaltonLens-Python/research/understanding-simulations/: Analyzing_Gimp_Vischeck.ipynb  SimulationComparison.ipynb  rgb_xyz_judd.ipynb
algorithms/DaltonLens-Python/research/understanding-simulations/colour-science/: run_colour_machado.py
algorithms/DaltonLens-Python/tests/: gen_achromat_groundtruth.py  test_cli.py  test_cli_direct.py  test_convert.py  test_daltonize.py  test_generate.py  test_simulate.py  test_simulate_edge.py  test_utils.py
algorithms/libDaltonLens/: CMakeLists.txt  libDaltonLens.c  libDaltonLens.h
algorithms/libDaltonLens/tests/: test_simulation.c
benchmarks/: run_benchmarks.py
docs/: KNOWN_ISSUES.md  architecture-foundations.md  axis-overlap-map-foundations.md  changelog-foundations.md  claude-memory-foundations.md  color-roles-token-foundations.md  color-strategy-foundations.md  color-support-accommodation-taxonomy.md  colorblind-friendly-design-guide.md  contrast-guide-foundations.md  contrast-guide.md  contributing-foundations.md  current-work-inventory.md  daltonization-guide-foundations.md  daltonization-guide.md  daltonlens-python-foundations.md  design-guide-foundations.md  devserver-guide-foundations.md  devserver-guide.md  display-adaptation-layer-foundations.md  dpi-transition-contract-foundations.md  evidence-matrix-foundations.md  experimental-mauve-burgundy-guide.md  font-contract-token-foundations.md  font-families-token-foundations.md  gnome-gtk4-guide-foundations.md  gnome-gtk4-guide.md  harmonized-depth-accommodation-guide.md  known-issues-foundations.md  latex-render-rules-foundations.md  latex-tokens-foundations.md  layout-system-foundations.md  logical-pixels-token-foundations.md  master-index-foundations.md  motion-token-foundations.md  oklch-guide-foundations.md  oklch-guide.md  pandoc-guide.md  (+29 more)
python-packages/sphinx-brand-theme/: MANIFEST.in  README.md  REQUIREMENTS.md  pyproject.toml
python-packages/sphinx-brand-theme/sphinx_brand_theme/: __init__.py
python-packages/sphinx-brand-theme/sphinx_brand_theme/brand_theme/: layout.html  theme.conf
python-packages/sphinx-brand-theme/sphinx_brand_theme/brand_theme/static/: brand.css  color-tokens.css
(+253 files in other folders)
