[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinx-brand-theme"
version = "0.1.0"
description = "Minimal CVD-friendly Sphinx theme using brand tokens"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Brand Team"}]
classifiers = [
  "Framework :: Sphinx",
  "Framework :: Sphinx :: Theme",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"sphinx_brand_theme" = ["brand_theme/*", "brand_theme/static/*"]

